--- a/app/src/main/res/layout/activity_scratch.xml
+++ b/app/src/main/res/layout/activity_scratch.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
+    <com.vince.andwidget.scratch.ScratchView
+        android:id="@+id/scratch_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="50dp">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/mask_bg"/>
+        android:layout_marginTop="30dp"
+        custom:finish_percent="50"
+        custom:mask_color="@color/color_mask"
+        custom:water_mark="@drawable/alipay"
+        custom:water_mark_height="20dp"
+        custom:water_mark_width="20dp">
 
-        <com.vince.andwidget.scratch.ScratchView
-            android:id="@+id/scratch_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </FrameLayout>
-
+    </com.vince.andwidget.scratch.ScratchView>
 
 </LinearLayout>
