--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,5 +6,6 @@
         <attr name="water_mark_width" format="reference|dimension"></attr>
         <attr name="water_mark_height" format="reference|dimension"></attr>
         <attr name="finish_percent" format="integer"></attr>
+        <attr name="scratch_width" format="reference|dimension"></attr>
     </declare-styleable>
 </resources>
