--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,12 @@
                 android:layout_height="wrap_content"
                 android:text="刮奖控件"/>
 
+            <Button
+                android:id="@+id/btn_shape"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="各种样式的ImageView"/>
+
 
         </LinearLayout>
 
